--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <section>
   <div class="qxbDownload">
     <div class="appLogo"></div>
-    <div class="qrCode"><img src="./img/qrCode.png" alt=""></div>
+    <div class="qrCode"><img src="./img/qrCode.jpg" alt="" width="147px" height="147px"></div>
     <div class="tips-title">让赚钱更简单</div>
     <div class="tips">
       官方团队手把手服务，赠送内部培训资料， 场景化定制，全面赋能
