modified view in web

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>雀享宝</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/common.css">
@@ -199,7 +199,7 @@
   </div>
 </section>
 
-<div class="webHidden">请在手机端查看</div>
+<footer><a href="http://www.miibeian.gov.cn/?copyright"></a>粤ICP备18138056号-1</footer><!--<div class="webHidden">请在手机端查看</div>-->
 
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/bootstrap.js"></script>
