add link of copyRight

--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@
       </div>
     </a>
     <div class="appLogo"></div>
-    <p class="earn-now-link">官方资料链接：www.quexb.com</p>
     <div class="earn-now-imgs">
       <a href="https://mp.weixin.qq.com/s/nBkOzYNBDGOqTU-ATkNo0Q?wx"><img src="img/vx.png" alt="微信"/></a>
       <a href="https://baike.sogou.com/v178329697.htm?fromTitle=%E9%9B%80%E4%BA%AB%E5%AE%9D"><img src="img/sgou.png" alt="搜狗"/></a>
@@ -199,7 +198,7 @@
   </div>
 </section>
 
-<footer><a href="http://www.miibeian.gov.cn/?copyright"></a>粤ICP备18138056号-1</footer><!--<div class="webHidden">请在手机端查看</div>-->
+<footer><a href="http://www.miibeian.gov.cn/?copyright">粤ICP备18138056号-1</a></footer><!--<div class="webHidden">请在手机端查看</div>-->
 
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/bootstrap.js"></script>
